[project]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Ramos",email = "matheussoaresramos@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "plotly (>=6.4.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
